--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <div class="logo"><router-link to="/home/index"><img src="images/logo.jpg" alt=""></router-link></div>
                 <div class="m-logo"><img src="images/logo.jpg" alt=""></div>
                 <div class="personaloperate">
-                   <!--  <div class="operateicon operateicon5" onClick="fullScreen()">
+                    <div class="operateicon operateicon5" onClick="fullScreen()">
                         <span class="von icon"></span>
-                    </div> -->
+                    </div>
                     <div class="operateicon operateicon1">
                         <span class="icon"><i></i></span>
                     </div>
