--- a/admin/index.html
+++ b/admin/index.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>管理系统</title><link href=./static/css/app.ba4b8d1e6db3149c85567887b14575bf.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3a13e9ff69051daad8bd.js></script><script type=text/javascript src=./static/js/vendor.6dd35da619da8f919df3.js></script><script type=text/javascript src=./static/js/app.0c9453d555fb07bef678.js></script></body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>管理系统</title><link href=./static/css/app.887575da8b9ddeeede84f1c9a1a10ffb.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.c52e6c5c2bbd0269bc93.js></script><script type=text/javascript src=./static/js/vendor.6dd35da619da8f919df3.js></script><script type=text/javascript src=./static/js/app.b2f49ae9d8487582826e.js></script></body></html>
+<style>
+    .ivu-menu {
+    color: #b5bed4;
+}
+</style>
