--- a/resume/index.html
+++ b/resume/index.html
@@ -113,8 +113,25 @@
                     </div>
                     <dl class="info content">
                         <dt class="header">
+                            <p>英泽科技-长江证券项目组 <span>h5工程师</span></p>
+                            <p class="text-muted">2015.12 - 2017.9</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>根据UI设计稿编写静态页面</li>
+                                <li>根据产品需求文档，进行 web 前端开发（vue）</li>
+                                <li>使用node, gulp, webpack搭建自动化的前端的开发环境</li>
+                                <li>微信小程序开发，使用微信jssdk开发微信内嵌网页</li>
+                                <li>使用全家桶，对接后端restful api，浏览器端渲染页面，实施前后端分离，提升用户体验，和开发效率</li>
+                                <li>负责配合后台开发人员，完成页面的交互及接口对接，页面数据动态渲染</li>
+                                <li>负责前端技术的完善，为提高用户体验，不断尝试前端新技术，提升团队水平</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
                             <p>武汉永乐云商 <span>前端工程师</span></p>
-                            <p class="text-muted">2015.12 - 至今</p>
+                            <p class="text-muted">2015.12 - 2017.9</p>
                         </dt>
                         <dd>
                             <ul>
@@ -165,6 +182,17 @@
                     <div class="icon">
                         <i class="fs-lg icon-child"></i><span class="mobile-title">项目经验</span>
                     </div>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>长江证券微信投顾商城</p>
+                            <p class="common-p">技术：vue全家桶</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>将app所有页面换成纯静态html页面交互</li>
+                            </ul>
+                        </dd>
+                    </dl>
                     <dl class="info content">
                         <dt class="header">
                             <p>永乐惠充app</p>
