--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui">
 </head>
 <body> 
-    <div id="app" style="height:100%;padding-top:100px;text-align: center;">
-        (づ｡◕‿‿◕｡)づ
-
-
-
-        
+    <div id="app" style="height:100%;padding-top:20%;text-align: center;font-size: 100px;">
+        (づ｡◕‿‿◕｡)づ 
     </div>
 </body>
 </html>
