--- a/resume/index.html
+++ b/resume/index.html
@@ -114,7 +114,7 @@
                     <dl class="info content">
                         <dt class="header">
                             <p>英泽科技-长江证券项目组 <span>h5工程师</span></p>
-                            <p class="text-muted">2015.12 - 2017.9</p>
+                            <p class="text-muted">2017.10 - 至今</p>
                         </dt>
                         <dd>
                             <ul>
@@ -122,7 +122,7 @@
                                 <li>根据产品需求文档，进行 web 前端开发（vue）</li>
                                 <li>使用node, gulp, webpack搭建自动化的前端的开发环境</li>
                                 <li>微信小程序开发，使用微信jssdk开发微信内嵌网页</li>
-                                <li>使用全家桶，对接后端restful api，浏览器端渲染页面，实施前后端分离，提升用户体验，和开发效率</li>
+                                <li>使用vue全家桶，对接后端json api，浏览器端渲染页面，前后端分离，提升用户体验、开发效率</li>
                                 <li>负责配合后台开发人员，完成页面的交互及接口对接，页面数据动态渲染</li>
                                 <li>负责前端技术的完善，为提高用户体验，不断尝试前端新技术，提升团队水平</li>
                             </ul>
