--- a/index.html
+++ b/index.html
@@ -11,5 +11,28 @@
     <div id="app" style="height:100%;padding-top:20%;text-align: center;font-size: 100px;">
         (づ｡◕‿‿◕｡)づ 
     </div>
+    <br>
+    <br>
+    <br>
+    <p style="text-align: center;">
+        <table style="display: inline-block;">
+            <tr>
+                <td>admin</td>
+                <td><a href="/admin/">查看</a></td>
+            </tr>
+            <tr>
+                <td>alpay</td>
+                <td><a href="/vue-yolly/">查看</a></td>
+            </tr>
+            <tr>
+                <td>下拉刷新</td>
+                <td><a href="/pullDownRefrash/">查看</a></td>
+            </tr>
+            <tr>
+                <td>游戏列表</td>
+                <td><a href="/indexlist/">查看</a></td>
+            </tr>
+        </table>
+    </p>
 </body>
 </html>
