--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </tr>
             <tr>
                 <td>游戏列表</td>
-                <td><a href="/indexlist/">查看</a></td>
+                <td><a href="/indexlist/gameList.html">查看</a></td>
             </tr>
         </table>
     </p>
