--- a/resume/index.html
+++ b/resume/index.html
@@ -6,10 +6,10 @@
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui">
-    <link rel=apple-touch-icon href=../vue-yolly/static/img/apple-touch-icon.png> 
-    <meta name=apple-mobile-web-app-capable content=yes>
-    <meta name=apple-touch-fullscreen content=yes>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
     <title>个人简历</title>
+    <link rel="apple-touch-icon" href="../app-icon.png"> 
     <link rel="stylesheet" href="../css/resume.css">
     <!--[if lt IE 10]>
         <script type="text/javascript">
