--- a/jiwufu/index.html
+++ b/jiwufu/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-touch-fullscreen content=yes><link rel=icon href=favicon.ico><link rel=apple-touch-icon href=https://wcx14311.github.io/vue-yolly/static/img/apple-touch-icon.png><title>jiwufu</title><script>;(function (win) {
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-touch-fullscreen content=yes><link rel=icon href=favicon.ico><link rel=apple-touch-icon href=https://wcx14311.github.io/vue-yolly/static/img/apple-touch-icon.png><title>jiwufu</title><script>;(function (win) {
             var doc = win.document;
             var docEl = doc.documentElement;
             var metaEl = doc.querySelector('meta[name="viewport"]');
@@ -38,4 +38,4 @@
                 }, false);
             }
             refreshRem();
-        })(window);</script><link href=js/chunk-2d22d746.35366b59.js rel=prefetch><link href=css/app.4c403d3e.css rel=preload as=style><link href=css/chunk-vendors.f5b88734.css rel=preload as=style><link href=js/app.02198ffb.js rel=preload as=script><link href=js/chunk-vendors.99ac3306.js rel=preload as=script><link href=css/chunk-vendors.f5b88734.css rel=stylesheet><link href=css/app.4c403d3e.css rel=stylesheet></head><body><div id=app></div><script src=js/chunk-vendors.99ac3306.js></script><script src=js/app.02198ffb.js></script></body></html>
+        })(window);</script><link href=js/chunk-2d22d746.35366b59.js rel=prefetch><link href=css/app.b6db698e.css rel=preload as=style><link href=css/chunk-vendors.f5b88734.css rel=preload as=style><link href=js/app.9099f1a5.js rel=preload as=script><link href=js/chunk-vendors.99ac3306.js rel=preload as=script><link href=css/chunk-vendors.f5b88734.css rel=stylesheet><link href=css/app.b6db698e.css rel=stylesheet></head><body><div id=app></div><script src=js/chunk-vendors.99ac3306.js></script><script src=js/app.9099f1a5.js></script></body></html>
