--- a/vue-yolly/index.html
+++ b/vue-yolly/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><link rel=apple-touch-icon href=./static/img/apple-touch-icon.png><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-touch-fullscreen content=yes><title>vue-yolly</title><script type=text/javascript>;(function(win, lib) {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel=apple-touch-icon href=./static/img/apple-touch-icon.png><meta name=apple-mobile-web-app-capable content=yes><meta name=apple-touch-fullscreen content=yes><title>vue-yolly</title><script type=text/javascript>;(function(win, lib) {
             var doc = win.document;
             var docEl = doc.documentElement;
             var tid;
@@ -29,4 +29,4 @@
                 }, false);
             }
             refreshRem();
-        })(window, window['lib'] || (window['lib'] = {}));</script><link href=./static/css/app.b2b3f9ffcfa8987823ca0cefa46ef61f.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.a2015a210edbad980415.js></script><script type=text/javascript src=./static/js/app.8ea6a04bbc1d49804754.js></script></body></html>
+        })(window, window['lib'] || (window['lib'] = {}));</script><link href=./static/css/app.c27d721bc60646c7610850ababed9390.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.a2015a210edbad980415.js></script><script type=text/javascript src=./static/js/app.6ab89ce12d304de0d057.js></script></body></html>
