--- a/vue-yolly/index.html
+++ b/vue-yolly/index.html
@@ -29,4 +29,4 @@
                 }, false);
             }
             refreshRem();
-        })(window, window['lib'] || (window['lib'] = {}));</script><link href=./static/css/app.c27d721bc60646c7610850ababed9390.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.a2015a210edbad980415.js></script><script type=text/javascript src=./static/js/app.6ab89ce12d304de0d057.js></script></body></html>
+        })(window, window['lib'] || (window['lib'] = {}));</script><link href=/vue-yolly/static/css/app.eec708e64412a095f5550ef2c8c2c2a0.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/vue-yolly/static/js/manifest.61d375263bb15ef29acd.js></script><script type=text/javascript src=/vue-yolly/static/js/vendor.a2015a210edbad980415.js></script><script type=text/javascript src=/vue-yolly/static/js/app.6ab89ce12d304de0d057.js></script></body></html>
