--- a/resume/index.html
+++ b/resume/index.html
@@ -23,7 +23,7 @@
     <![endif]-->
 </head>
 <body> 
-    <div id="app" style="height:100%">
+    <div id="app">
         <transition name="fade"><router-view></router-view></transition>
     </div>
     <template id="profile">
@@ -41,7 +41,7 @@
                 <div class="contact-details">
                     <div class="detail">
                         <span class="icon"><i class="icon fs-lg icon-profile"></i></span>
-                        <span class="info">男 26岁 4年工作经验</span>
+                        <span class="info">男 28岁 6年工作经验</span>
                     </div>
                     <div class="detail">
                         <span class="icon"><i class="icon fs-lg icon-location"></i></span>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="detail">
                         <span class="icon"><i class="icon fs-lg icon-link"></i></span>
-                        <span class="info"><a href="https://github.com/wcx14311" style="color:#ff475e" target="_blank">https://github.com/wcx14311</a></span>
+                        <span class="info"><a href="https://github.com/wcx14311" target="_blank">github个人主页</a></span>
                     </div>
                 </div>
             </div>
@@ -68,15 +68,15 @@
                         <i class="fs-lg icon-board"></i><span class="mobile-title">自我描述</span>
                     </div>
                     <ul class="info content mop-wrapper">
-                        <li>个人主攻 web 前端开发，4年+前端开发经验</li>
-                        <li>熟练使用html，css/css3，JavaScript，DOM/BOM</li>
+                        <li>个人主攻 web 前端开发，6年+前端开发经验</li>
+                        <li>熟练使用html，css/css3，JavaScript，DOM/BOM，http/https，ajax</li>
                         <li>熟悉ES6，熟练node.js+mongoDB入门级，了解前端生态中各种工具与框架</li>
                         <li>熟练掌握Vue+webpack开发模式，掌握vue.js周边前端技术栈及各大ui组件库</li>
+                        <li>熟练掌握：Web Developer Tools，HttpWatch，Fiddler, https，Nginx，Linux，photoshop，ftp，git，svn，shell等各种前端开发技术</li>
                         <li>能够使用react.js开发入门项目，短时间内可以融入react团队</li>
                         <li>了解并掌握cordova混合开发，以及直接使用纯前端技术、webview、官方插件开发webapp</li>
                         <li>可自己配置基于gulp、webpack高效可控的，前端构建工具，实现开发流程自动化和工程化。方便团队协作开发</li>
                         <li>喜欢关注web前端相关新技术，不断尝试前端新技术，对于新技术有很强的学习兴趣。喜欢折腾造轮子，不定时更新github小项目。</li>
-                        <li>熟练使用git、svn、shell工具</li>
                         <li>热爱前端这份工作，也热爱一切美好的事物，对于我来说，是一种责任、是一种快乐。</li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
                     </div>
                     <dl class="info content">
                         <dt class="header">
-                            <p>英泽科技-长江证券项目组 <span>h5工程师</span></p>
+                            <p>英泽科技-长江证券人力派遣 <span>h5工程师</span></p>
                             <p class="text-muted">2017.10 - 至今</p>
                         </dt>
                         <dd>
@@ -150,23 +150,7 @@
                     </dl>
                     <dl class="info content">
                         <dt class="header">
-                            <p>武汉纺友技术有限公司<span>前端工程师</span></p>
-                            <p class="text-muted">2015.03 - 2015.12</p>
-                        </dt>
-                        <dd>
-                            <ul>
-                                <li>根据UI设计稿编写静态页面</li>
-                                <li>使用gulp管理维护前端代码</li>
-                                <li>jquery/zepto 数据处理、Ajax交互开发、前端公共组件开发</li>
-                                <li>负责配合后台开发人员，完成页面的交互及接口对接</li>
-                                <li>根据需求封装通用js插件</li>
-                            </ul>
-                        </dd>
-                    </dl>
-                    <dl class="info content">
-                        <dt class="header">
                             <p>上海昕鼎网络科技有限公司<span>前端工程师</span></p>
-                            <p class="text-muted">2013.11 - 2015.02</p>
                         </dt>
                         <dd>
                             <ul>
@@ -187,12 +171,55 @@
                     </div>
                     <dl class="info content">
                         <dt class="header">
-                            <p>长江证券微信投顾商城</p>
+                            <p>同花顺客户端科创板交易权限开通功能</p>
+                            <p class="common-p">技术：vue，webpack</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>将app所有页面换成纯静态html页面交互</li>
+                                <li>使用gulp，webpack配置自动化的开发环境</li>
+                                <li>实现开发环境，实现监听文件变动，自动刷客户端页面 (LiveReload)</li>
+                                <li>测试ios\Android开发的cordova原生功能插件，将这些插件封装成便于使用js函数</li>
+                                <li>本地mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
+                                <li>接入后端restful api,放到测试环境、测试联调</li>
+                                <li>部署生产环境 css,js合并压缩 去缓存文件 Reversion (MD5) 解决方案</li>
+                                <li>生产环境，使用nginx代码部署在阿里云上，反向代理后端api</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>长江e号、官微各种h5营销活动(秒杀，转盘，答题)</p>
+                            <p class="common-p">技术：vue，webpack</p>
+                        </dt>
+                        <dd>
+                            <ul>
+                                <li>将app所有页面换成纯静态html页面交互</li>
+                                <li>使用gulp，webpack配置自动化的开发环境</li>
+                                <li>实现开发环境，实现监听文件变动，自动刷客户端页面 (LiveReload)</li>
+                                <li>测试ios\Android开发的cordova原生功能插件，将这些插件封装成便于使用js函数</li>
+                                <li>本地mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
+                                <li>接入后端restful api,放到测试环境、测试联调</li>
+                                <li>部署生产环境 css,js合并压缩 去缓存文件 Reversion (MD5) 解决方案</li>
+                                <li>生产环境，使用nginx代码部署在阿里云上，反向代理后端api</li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl class="info content">
+                        <dt class="header">
+                            <p>长江证券官微投顾商城、l2付费订阅功能</p>
                             <p class="common-p">技术：vue全家桶</p>
                         </dt>
                         <dd>
                             <ul>
-                                <li></li>
+                                <li>将app所有页面换成纯静态html页面交互</li>
+                                <li>使用gulp，webpack配置自动化的开发环境</li>
+                                <li>实现开发环境，实现监听文件变动，自动刷客户端页面 (LiveReload)</li>
+                                <li>测试ios\Android开发的cordova原生功能插件，将这些插件封装成便于使用js函数</li>
+                                <li>本地mock数据实现页面交互、数据绑定、数据提交、文件上传、在线支付等功能</li>
+                                <li>接入后端restful api,放到测试环境、测试联调</li>
+                                <li>部署生产环境 css,js合并压缩 去缓存文件 Reversion (MD5) 解决方案</li>
+                                <li>生产环境，使用nginx代码部署在阿里云上，反向代理后端api</li>
                             </ul>
                         </dd>
                     </dl>
@@ -349,7 +376,8 @@
                     </dl>
                 </div>
             </div>
-            <a href="../吴长新-前端开发-个人简历.pdf" class="dlown">下载</a>
+            <a v-if="showbtn==1" @click="backCard" class="fixed-btn cardd">卡片</a>
+            <a v-if="showbtn==1" href="../吴长新-前端开发-个人简历.pdf" class="fixed-btn dlown">下载</a>
         </div>
     </template>
     <template id="index">
@@ -466,8 +494,10 @@
     };
     var profile = {
         template:'#profile',
-        data:function(){
-            return {}
+        data: function () {
+            return {
+                showbtn: this.$route.query.b
+            }
         },
         methods:{
             backCard:function(){
