--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-touch-fullscreen" content="yes">
     <title>个人简历</title>
     <link rel="apple-touch-icon" href="../app-icon.png"> 
-    <link rel="stylesheet" href="../css/resume.css?sas=dss">
+    <link rel="stylesheet" href="../css/resume.css?sas=dkjsefhksalj">
     <!--[if lt IE 10]>
         <script type="text/javascript">
             function isIE() {
