--- a/index.html
+++ b/index.html
@@ -1,294 +1,42 @@
-<!DOCTYPE HTML>
-<html lang="zh-CN">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="renderer" content="webkit">
-    <meta name="renderer" content="webkit|ie-comp|ie-stand">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            align-items: center;
-            background: #642B73;
-            background: linear-gradient(to bottom, #C6426E, #642B73);
-            display: flex;
-            font-family: 'Open Sans', sans;
-            justify-content: center;
-            overflow: hidden;
-            -webkit-perspective: 1800px;
-            perspective: 1800px;
-            text-align: center;
-            margin: 0 20px;
-        }
-
-        h1 {
-            color: #3e3e42;
-            font-size: 32px;
-            font-weight: 800;
-            letter-spacing: -1px;
-            margin-bottom: 30px;
-            -webkit-transform: translateZ(35px);
-            transform: translateZ(35px);
-        }
-
         h3 {
-            color: #eb285d;
-            font-size: 16px;
-            margin-bottom: 6px;
-            -webkit-transform: translateZ(25px);
-            transform: translateZ(25px);
+            margin-left: 20px;
         }
-
-        .cards {
-            background: #fff;
-            border-radius: 15px;
-            box-shadow: 0px 10px 20px 20px rgba(0, 0, 0, 0.17);
-            display: inline-block;
-            padding: 30px 35px;
-            -webkit-perspective: 1800px;
-            perspective: 1800px;
-            text-align: left;
-            -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-            -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-            -webkit-transform: rotateX(11deg) rotateY(16.5deg);
-            transform: rotateX(11deg) rotateY(16.5deg);
-            min-width: 595px;
+        h3 span {
+            font-size: 13px;
+            font-weight: normal;
+            margin-left: 10px;
+            color: #666;
         }
-
-        .card {
-            border-radius: 15px;
-            box-shadow: 5px 5px 20px -5px rgba(0, 0, 0, 0.6);
-            display: inline-block;
-            height: 250px;
-            overflow: hidden;
-            -webkit-perspective: 1200px;
-            perspective: 1200px;
-            position: relative;
-            -webkit-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-            -webkit-transform: translatez(35px);
-            transform: translatez(35px);
-            transition: -webkit-transform 200ms ease-out;
-            transition: transform 200ms ease-out;
-            transition: transform 200ms ease-out, -webkit-transform 200ms ease-out;
-            width: 175px;
-            text-align: center;
-        }
-
-        .card:not(:last-child) {
-            margin-right: 30px;
-        }
-
-        .card__img {
-            position: relative;
-            height: 100%;
-        }
-
-        .card__bg {
-            bottom: -50px;
-            left: -50px;
-            position: absolute;
-            right: -50px;
-            top: -50px;
-            -webkit-transform-origin: 50% 50%;
-            transform-origin: 50% 50%;
-            -webkit-transform: translateZ(-50px);
-            transform: translateZ(-50px);
-            z-index: 0;
-        }
-
-        .card__one .card_./
- a es          right: -10px;
-            height: 110%;
-        }
-
-        .card__one .card__bg {
-            background: url("./images/3dr_monobg.jpg") center/cover no-repeat;
-        }
-
-        .card__two .card__img {
-            top: 25px;
-        }
-
-        .card__two .card__bg {
-            background: url("./images/3dr_spirited.jpg") center/cover no-repeat;
-        }
-
-        .card__three .card__img {
-            top: 5px;
-            left: -4px;
-            height: 110%;
-        }
-
-        .card__three .card__bg {
-            background: url("./images/3dr_howlbg.jpg") center/cover no-repeat;
-        }
-        .card__four .card__bg {
-            background: url("./images/bg_2timg.jpg") center/cover no-repeat;
-        }
-        .card__five .card__bg {
-            background: url("./images/bg_1timg.jpg") center/cover no-repeat;
-        }
-        .card__text {
-            align-items: center;
-            background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.55) 100%);
-            bottom: 0;
-            display: flex;
-            flex-direction: column;
-            height: 70px;
-            justify-content: center;
-            position: absolute;
-            width: 100%;
-            z-index: 2;
-        }
-
-        .card__title {
-            color: #fff;
-            font-size: 18px;
-            font-weight: 700;
-            padding: 0 10px;
-            margin-bottom: 3px;
-        }
-
-        .notice {
-            background: gold;
-            border-top-left-radius: 6px;
-            bottom: 0;
-            font-family: monospace;
-            font-size: 14px;
-            padding: 8px 10px;
-            position: absolute;
-            right: -20px;
-        }
-
-        .twitter__link {
-            cursor: pointer;
-            position: absolute;
-            right: -10px;
-            top: 12px;
-            z-index: -1;
-            background: #00aced;
-            border-radius: 20px;
-            height: 30px;
-            text-decoration: none;
-            padding-right: 10px;
-            justify-content: space-between;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-            color: #fff;
-            font-size: 14px;
-            width: 74px;
-            opacity: 0.15;
-        }
-
-        .twitter__link:hover {
-            opacity: 1;
-        }
-
-        .twitter__icon {
-            height: 30px;
+        ul li {
+            margin-top: 5px;
+            list-style-type: circle;
         }
     </style>
 </head>
-
 <body>
-    <!-- <div class="font">wcx14311<span>.</span>github.io</div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="content">
-        <p><a href="/admin/">- admin管理平台 -</a></p>
-        <p><a href="/vue-yolly/">- 支付宝h5版 -</a></p>
-        <p><a href="/pullDownRefrash/">- 下拉刷新 -</a></p>
-        <p><a href="/indexlist/gameList.html">- 游戏列表 -</a></p>
-        <p><a href="/indexlist/gameList.html">- 音乐播放器h5 -</a></p>
-    </div> -->
-    <div class="cards">
-        <h2>宫崎骏动画</h2>
-        <div class="card card__one">
-            <div class="card__bg"></div>
-            <img class="card__img" src="./images/3dr_mono.png" />
-            <div class="card__text">
-                <p class="card__title">幽灵公主</p>
-            </div>
-        </div>
-        <div class="card card__two">
-            <div class="card__bg"></div>
-            <img class="card__img" src="./images/3dr_chihiro.png" />
-            <div class="card__text">
-                <p class="card__title">千与千寻</p>
-            </div>
-        </div>
-        <div class="card card__three">
-            <div class="card__bg"></div>
-            <img class="card__img" src="./images/3dr_howlcastle.png" />
-            <div class="card__text">
-                <p class="card__title">哈尔的移动城堡</p>
-            </div>
-        </div>
-        <div class="card card__four">
-            <div class="card__bg"></div>
-            <img class="card__img" src="./images/bg_2.png" />
-            <div class="card__text">
-                <p class="card__title">天空之城</p>
-            </div>
-        </div>
-        <div class="card card__five">
-            <div class="card__bg"></div>
-            <img class="card__img" src="./images/bg_1.png" />
-            <div class="card__text">
-                <p class="card__title">龙猫</p>
-            </div>
-        </div>
-    </div>
+    <h3>移动端<span>请使用手机打开</span></h3>
+    <ul>
+        <li><a href="https://wcx14311.github.io/sss/">移动端商城</a></li>
+        <li><a href="https://wcx14311.github.io/jiwufu/">支付宝集五福卡包</a></li>
+        <li><a href="https://wcx14311.github.io/player/">音乐播放器</a></li>
+        <li><a href="https://wcx14311.github.io/indexlist/gameList.html">游戏列表搜索功能</a></li>
+        <li><a href="https://wcx14311.github.io/pullDownRefrash/">下拉刷新</a></li>
+        <li><a href="https://wcx14311.github.io/vue-yolly/">基于h5支付宝客户端</a></li>
+    </ul>
+    <h3>pc端</h3>
+    <ul>
+        <li><a href="https://wcx14311.github.io/card/">号卡充值平台(基于jquery)</a></li>
+        <li><a href="https://wcx14311.github.io/admin/">管理平台(基于iview)</a></li>
+        <li><a href="https://wcx14311.github.io/ant-admin/">管理平台(基于ant-vue)</a></li>
+        <li><a href="https://wcx14311.github.io/ele-admin/">管理平台(基于element-ui)</a></li>
+    </ul>
 </body>
-<script>
-    var cards = document.querySelector(".cards");
-    var images = document.querySelectorAll(".card__img");
-    var backgrounds = document.querySelectorAll(".card__bg");
-    var range = 40;
-
-    // const calcValue = (a, b) => (((a * 100) / b) * (range / 100) -(range / 2)).toFixed(1);
-    var calcValue = function calcValue(a, b) {
-        return (a / b * range - range / 2).toFixed(1);
-    }; // thanks @alice-mx
-
-    var timeout = void 0;
-    document.addEventListener('mousemove', function (_ref) {
-        var x = _ref.x,
-            y = _ref.y;
-        if (timeout) {
-            window.cancelAnimationFrame(timeout);
-        }
-
-        timeout = window.requestAnimationFrame(function () {
-            var yValue = calcValue(y, window.innerHeight);
-            var xValue = calcValue(x, window.innerWidth);
-            console.log(xValue, yValue);
-            cards.style.transform = "rotateX(" + yValue + "deg) rotateY(" + xValue + "deg)";
-
-            [].forEach.call(images, function (image) {
-                image.style.transform = "translateX(" + -xValue + "px) translateY(" + yValue +
-                    "px)";
-            });
-
-            [].forEach.call(backgrounds, function (background) {
-                background.style.backgroundPosition = xValue * .45 + "px " + -yValue * .45 +
-                    "px";
-            });
-        });
-    }, false);
-</script>
-
 </html>
